commit tree d6c3272f73fbb7ccf7e8d5421e59fb5da550b206

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>IDK</title>
+  </head>
+  <body>
+    
+  </body>
+</html>
